  by the compiler. Closes :issue:`379`.
- Fixed a spurious unicode comparison warning (closes :issue:`372` and
  :issue:`373`).
- Improved handling of empty string attributes. In previous versions of
  PyTables empty string were stored as scalar HDF5 attributes having size 1
  and value '\0' (an empty null terminated string).
  Now empty string are stored as HDF5 attributes having zero size 


Bugs fixed
----------

- Fixed compatibility problems with numpy 1.9 and 1.10-dev
  (closes :issue:`362` and :issue:`366`)
- Fixed support for unicode node names in LRU cache (only Python 2 was
  affected). Closes :issue:`367` and :issue:`369`.
- Fixed support for unicode node titles (only Python 2 was affected).
  Closes :issue:`370` and :issue:`374`.
- Fixed a bug that caused the silent truncation of unicode attributes
  containing the '\0' character. Closes :issue:`371'.
- Fixed :func:`descr_from_dtype` to work as expected with complex types.
  Closes :issue:`381`.
- Fixed the :class:`tests.test_basics.ThreadingTestCase` test case.
  Closes :issue:`359`.


Changes from 3.1.0 to 3.1.1
===========================

Bugs fixed
----------

- Fixed a critical bug that caused an exception at import time.
  The error was triggered when a bug in long-double detection is detected
  in the HDF5 library (see :issue:`275`) and numpy_ does not expose
  `float96` or `float128`. Closes :issue:`344`.
- The internal Blosc_ library has been updated to version 1.3.5.
  This fixes a false buffer overrun condition that made c-blosc to fail,
  even if the problem was not real.


Improvements
------------

- Do not create a temporary array when the *obj* parameter is not specified
  in :meth:`File.create_array` (thanks to Francesc).
  Closes :issue:`337` and :issue:`339`).
- Added two new utility functions
  (:func:`tables.nodes.filenode.read_from_filenode` and
  :func:`tables.nodes.filenode.save_to_filenode`) for the direct copy from
  filesystem to filenode and vice versa (closes :issue:`342`).